<resources>
    <string name="app_name">MaxCalendar</string>

    <string name="MON">一</string>
    <string name="THE">二</string>
    <string name="WED">三</string>
    <string name="THR">四</string>
    <string name="FRI">五</string>
    <string name="STU">六</string>
    <string name="SUN">日</string>

    <string name="yearString">年</string>
    <string name="monthString">月</string>
    <string name="dayString">日</string>

    <string name="addCalendarEventString">添加日历事件</string>
    <string name="titleString">标题 ：</string>
    <string name="priorityString">优先级 ：</string>
    <string name="startTimeString">开始时间 ：</string>
    <string name="endTimeString">结束时间 ：</string>
    <string name="contentString">内容 ：</string>

    <string name="cancelString">取消</string>
    <string name="confirmString">确认</string>

    <string name="addNewEventErrorString">请填写完整的数据！</string>

    <string name="settingString">设置</string>

    <string name="calendarEvent">日程</string>

</resources>
